--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -24,3 +24,10 @@
     height: 178px;
     display: block;
   }
+  //富文本样式
+  .container-publish .ql-editor{
+    height: 300px;
+  }
+  .ql-toolbar.ql-snow{
+    padding: 0;
+  }
